# decision-gen-analyzer

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  adr-template.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.md  test_lan_discovery.py  test_phase1.py  test_phase2.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  lint.yml  test-backend.yml  test-frontend.yml
config/personas/: README.md  architect.json  business_analyst.json  devops_engineer.json  philosopher.json  qa_engineer.json  risk_manager.json  (+2 more)
decisions/: fastapi-for-backend-framework.json  managing-lightrag-document-id-mappings.json  use-langchain-for-llm-interfacing.json
docs/: BRANCHING_STRATEGY.md  EXPORT_IMPORT.md  LAN_DISCOVERY.md  LIGHTRAG_CACHE.md  LOAD_BALANCER_DEPLOYMENT.md  MCP_INTEGRATION.md  PARALLEL_PROCESSING.md  PHASES.md  PWA_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE_LLM_PROVIDERS.md  QUICK_REFERENCE_MULTI_BACKEND.md  TASK_QUEUE_VISIBILITY.md  TESTING.md
frontend/: eslint.config.mjs  generate-icons.js  knip.json  next-pwa.d.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: calculate-next-version.sh  commitlint-check.sh  dev.sh  get_host_ip.sh
src/: __init__.py  adr_contextual_analysis.py  adr_file_storage.py  adr_generation.py  adr_import_export.py  adr_storage.py  adr_validation.py  celery_app.py  config.py  job_scheduler.py  lightrag_client.py  lightrag_doc_cache.py  lightrag_sync.py  llama_client.py  llm_provider_storage.py  logger.py  mcp_client.py  mcp_config_storage.py  mcp_orchestrator.py  mcp_result_storage.py  models.py  persona_manager.py  prompts.py  queue_state_tracker.py  queue_status_broadcaster.py  reanalysis_automation.py  task_queue_monitor.py  tasks.py  web_search.py  websocket_broadcaster.py  websocket_manager.py
(+88 files in other folders)
